# DoxyVB6

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
build_env/: build.bat
docs/: product-spec.md
docs/adr/: 0001-vb-indexed-property-conversion.md
docs/agents/: domain.md  issue-tracker.md
example/data/: TestFile.xlsm  build_document.bat.lnk  export_one.bat.lnk
example/tool/: ExcelModuleManager  build_document.bat  build_document_main.ps1  export_one.bat  export_one_main.ps1
example/tool/DoxyVB6/: Doxyfile
src/: build_document.bat  build_document_main.ps1  export_one_main.ps1  main.py
src/DoxyVB6/: __main__.py  codeconv.py  conv_csharp.py  conv_vb6.py  main.py
src/ExcelModuleManager/: ExcelModuleManager.psd1  ExcelModuleManager.psm1  Export-AllModuleFromExcelFile.ps1  Export-ModuleFromExcelFile.ps1  Import-ModuleToExcelFile.ps1
tests/: test_conv_csharp.py  test_conv_vb6.py  test_indexed_property_conversion.py
